WIP Showcases added
- image processor now accounts for .svgs
- file server now accounts for .json

--- a/src-iso/components/dropdown.scss
+++ b/src-iso/components/dropdown.scss
@@ -4,10 +4,15 @@ $nav-time: $animation-time * 1;
 $scaled-up: scale(1.2, 1.2);
 
 .dropdown-container {
-  background-color: $bg-color-inverted;
   padding-top: $links-clearance;
   margin-top: -$padding * 1.25;
   z-index: 100;
+  color: $text-color;
+}
+
+.dropdown-container.inverse {
+  background-color: $bg-color-inverted;
+  color: $text-color-inverted;
 }
 
 .dropdown-caret {
@@ -42,7 +47,6 @@ $scaled-up: scale(1.2, 1.2);
 }
 
 .dropdown {
-  @extend .inverse;
   position: relative;
   z-index: 1000;
 
