--- a/src-iso/components/showcase.scss
+++ b/src-iso/components/showcase.scss
@@ -2,6 +2,85 @@ $panim-time: $animation-time * 2;
 $video-width: 40rem;
 $large-video-width: $video-width * 1.5;
 
+
+.wip-file {
+  margin-bottom: 1rem;
+
+  video {
+    width: 30rem;
+    height: 16.875rem;
+    margin-bottom: -0.2rem;
+    box-sizing: content-box;
+  }
+
+  video::-internal-media-controls-download-button {
+    display:none;
+  }
+
+  video::-webkit-media-controls-enclosure {
+    overflow:hidden;
+    cursor: pointer;
+  }
+
+  video::-webkit-media-controls-panel {
+      width: calc(100% + 30px); /* Adjust as needed */
+  }
+
+  .wip-icon-container {
+    background-color: $bg-color-inverted;
+  }
+
+  .wip-description {
+    margin-bottom: 2rem;
+  }
+
+  .wip-meta {
+
+    .wip-title {
+      display: block;
+      padding: 0.25rem 0rem 0.25rem 0rem;
+
+      color: $text-color-inverted;
+      background-color: $bg-color-inverted;
+
+      .wip-name {
+        display: inline;
+        margin-left: 0.5rem;
+      }
+      .wip-ext {
+        display: inline;
+        color: $text-color-hover;
+      }
+      .wip-download {
+        display: inline-block;
+        float: right;
+        margin-right: 0.5rem;
+        height: 1.1rem;
+        width: 1.1rem;
+        margin-top: 0.3rem;
+        background-image: url(../assets/download.svg);
+        transition: transform $animation-time;
+      }
+      .wip-download:hover {
+        transform: scale(1.5,1.5);
+      }
+
+    }
+  }
+
+  .wip-image {
+    width: 30rem;
+    height: 30rem;
+  }
+
+  .wip-icon {
+    width: 9rem;
+    height: 9rem;
+    background-color: $bg-color-inverted;
+  }
+
+}
+
 .product-cell {
 
   position: absolute;
@@ -94,9 +173,7 @@ $large-video-width: $video-width * 1.5;
       }
       display: block-inline;
 
-      padding: 0.50rem;
-      padding-left: 0.55rem;
-      padding-top: 0rem;
+      padding: 0rem 0.5rem 0.5rem 0.55rem;
       -webkit-margin-before: 0rem;
       -webkit-margin-after: 0rem;
       transition: top $panim-time;
