--- a/src-iso/components/showcase.scss
+++ b/src-iso/components/showcase.scss
@@ -2,6 +2,27 @@ $panim-time: $animation-time * 2;
 $video-width: 40rem;
 $large-video-width: $video-width * 1.5;
 
+.showcase-detail {
+  @extend .padded;
+
+  display: flex;
+  flex-direction: row;
+
+  .showcase-portrait {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 16rem;
+    height: 12rem;
+    flex-shrink: 0;
+  }
+
+  .showcase-essay.showcase-essay-right {
+    margin-left: 1rem;
+    margin-top: -1rem;
+  }
+
+}
 
 .wip-file {
   margin-bottom: 1rem;
