--- a/src-iso/components/background.scss
+++ b/src-iso/components/background.scss
@@ -23,9 +23,9 @@
   background-color: $bg-color-inverted;
 }
 
-#video-background::-webkit-media-controls-start-playback-button {
-  display: none;
-}
+// #video-background::-webkit-media-controls-start-playback-button {
+//   display: none;
+// }
 
 #video-background {
 
