download button moved

--- a/src-iso/components/showcase.scss
+++ b/src-iso/components/showcase.scss
@@ -77,8 +77,8 @@ $large-video-width: $video-width * 1.5;
       }
       .wip-download {
         display: inline-block;
-        float: right;
         margin-right: 0.5rem;
+        margin-left: 0.5rem;
         height: 1.1rem;
         width: 1.1rem;
         margin-top: 0.3rem;
