social media links
-instagram added
- social media links now show on homepage

--- a/src-iso/pages/home.scss
+++ b/src-iso/pages/home.scss
@@ -35,6 +35,13 @@
   }
 }
 
+.splash-social-media {
+  position: absolute;
+  pointer-events: auto;
+  left: 1rem;
+  bottom: 1rem;
+}
+
 #just-clicks-button {
   width: 1rem;
   height: 1rem;
