--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -16,3 +16,4 @@
 @import "../components/nut";
 @import "../components/people";
 @import "../components/showcase";
+@import "../components/socialmedia";
